--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ main.success{
   background-image: none;
 }
 
+.dados {
+  width: 60px;
+}
+
 
 main input, main button, main p{
   width: 400px;
@@ -31,7 +35,7 @@ main input, main button, main p{
   font-size: 3rem;
   text-transform: uppercase;
 }
-p{
+p {
   text-align: center;
   margin:0;
 }
