--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@ main.success{
 }
 
 .dados {
-  width: 60px;
+  width: 100%;
 }
 
 
-main input, main button, main p{
+main input, main p{
   width: 400px;
 }
 
@@ -53,9 +53,12 @@ input{
 }
 
 button{
-  padding: 10px 15px;
-  border-radius: 5px;
-  background-color: #2d2d2d;
-  color: #fff;
-  font-size: 1rem;
+  background: none;
+  width: 87px;
+  border: 1px dashed black;
+}
+
+button:hover {
+  cursor: pointer;
+  border-color: yellow;
 }
