--- a/style.css
+++ b/style.css
@@ -28,7 +28,11 @@ main.success{
 
 
 main input, main p{
-  width: 400px;
+  /* width: 100%; */
+}
+
+input {
+  width: 60%;
 }
 
 .title {
@@ -42,7 +46,7 @@ p {
 
 .big{
   font-weight: bold;
-  
+  padding: 2rem;
 }
 
 input{
@@ -62,3 +66,13 @@ button:hover {
   cursor: pointer;
   border-color: yellow;
 }
+
+
+/* @media only screen and (max-width: 425px) {
+
+main {
+  width: 100%;
+ 
+}
+
+}  */
