--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ main{
   justify-content: center;
   align-items: center;
   gap:1em;
+  text-align: center;
   transition: 0.2s ease-in;
 }
 
@@ -67,12 +68,3 @@ button:hover {
   border-color: yellow;
 }
 
-
-/* @media only screen and (max-width: 425px) {
-
-main {
-  width: 100%;
- 
-}
-
-}  */
